--- a/package.json
+++ b/package.json
@@ -23,9 +23,7 @@
   "license": "ISC",
   "packageManager": "pnpm@10.9.0",
   "dependencies": {
-    "@aws-sdk/client-cognito-identity-provider": "^3.794.0",
     "@aws-sdk/client-dynamodb": "^3.788.0",
-    "@aws-sdk/lib-dynamodb": "^3.789.0",
     "@types/jsonwebtoken": "^9.0.9",
     "@types/uuid": "^10.0.0",
     "class-transformer": "^0.5.1",
@@ -44,6 +42,8 @@
     "zod": "^3.24.3"
   },
   "devDependencies": {
+    "@aws-sdk/client-cognito-identity-provider": "^3.797.0",
+    "@aws-sdk/lib-dynamodb": "^3.797.0",
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.1",
     "@types/jest": "^29.5.14",
@@ -52,6 +52,7 @@
     "@types/supertest": "^6.0.3",
     "@typescript-eslint/eslint-plugin": "^8.31.0",
     "@typescript-eslint/parser": "^8.31.0",
+    "aws-sdk-client-mock": "^4.1.0",
     "eslint": "^9.25.1",
     "jest": "^29.7.0",
     "nodemon": "^3.1.10",
