--- a/package.json
+++ b/package.json
@@ -53,8 +53,10 @@
     "@typescript-eslint/eslint-plugin": "^8.31.0",
     "@typescript-eslint/parser": "^8.31.0",
     "aws-sdk-client-mock": "^4.1.0",
+    "aws-sdk-client-mock-jest": "^4.1.0",
     "eslint": "^9.25.1",
     "jest": "^29.7.0",
+    "jest-mock-extended": "4.0.0-beta1",
     "nodemon": "^3.1.10",
     "prettier": "^3.5.3",
     "supertest": "^7.1.0",
