--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "user-managemen-service",
-  "version": "1.0.0",
+  "version": "2.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -24,6 +24,7 @@
   "packageManager": "pnpm@10.9.0",
   "dependencies": {
     "@aws-sdk/client-dynamodb": "^3.788.0",
+    "@aws-sdk/util-dynamodb": "^3.799.0",
     "@types/jsonwebtoken": "^9.0.9",
     "@types/uuid": "^10.0.0",
     "class-transformer": "^0.5.1",
