--- a/package.json
+++ b/package.json
@@ -51,7 +51,8 @@
     "winston": "^3.17.0",
     "winston-cloudwatch": "^6.3.0",
     "winston-elasticsearch": "^0.19.0",
-    "zod": "^3.24.3"
+    "zod": "^3.24.3",
+    "archiver": "^7.0.0"
   },
   "devDependencies": {
     "@aws-sdk/client-cognito-identity-provider": "^3.797.0",
