--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@opentelemetry/semantic-conventions": "^1.36.0",
     "@types/jsonwebtoken": "^9.0.9",
     "@types/uuid": "^10.0.0",
+    "archiver": "^7.0.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "cors": "^2.8.5",
@@ -45,18 +46,19 @@
     "jsonwebtoken": "^9.0.2",
     "jwks-rsa": "^3.2.0",
     "opossum": "^8.4.0",
+    "prom-client": "^15.1.3",
     "reflect-metadata": "^0.2.2",
     "tsyringe": "^4.10.0",
     "uuid": "^11.1.0",
     "winston": "^3.17.0",
     "winston-cloudwatch": "^6.3.0",
     "winston-elasticsearch": "^0.19.0",
-    "zod": "^3.24.3",
-    "archiver": "^7.0.0"
+    "zod": "^3.24.3"
   },
   "devDependencies": {
     "@aws-sdk/client-cognito-identity-provider": "^3.797.0",
     "@aws-sdk/lib-dynamodb": "^3.797.0",
+    "@types/archiver": "^6.0.3",
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.1",
     "@types/jest": "^29.5.14",
