--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\"",
     "lint:fix": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "format": "prettier --write \"src/**/*.ts\"",
-    
     "docker:up": "docker-compose up -d",
     "docker:down": "docker-compose down",
     "docker:build": "docker-compose build"
@@ -58,6 +57,7 @@
   },
   "devDependencies": {
     "@aws-sdk/client-cognito-identity-provider": "^3.797.0",
+    "@aws-sdk/credential-provider-node": "^3.879.0",
     "@aws-sdk/lib-dynamodb": "^3.797.0",
     "@types/archiver": "^6.0.3",
     "@types/cors": "^2.8.17",
@@ -70,6 +70,7 @@
     "@typescript-eslint/parser": "^8.31.0",
     "aws-sdk-client-mock": "^4.1.0",
     "aws-sdk-client-mock-jest": "^4.1.0",
+    "dotenv": "^17.2.1",
     "eslint": "^9.25.1",
     "jest": "^29.7.0",
     "jest-mock-extended": "4.0.0-beta1",
