--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "test": "jest --runInBand",
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
-    "test:e2e": "jest --config jest.e2e.config.js",
+    "test:integration": "jest --config jest.integration.config.js --runInBand",
+    "test:e2e": "jest --config jest.e2e.config.js --runInBand",
+    "test:all": "pnpm run test && pnpm run test:integration && pnpm run test:e2e",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\"",
     "lint:fix": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "format": "prettier --write \"src/**/*.ts\"",
